--- a/Files/currentMatch.html
+++ b/Files/currentMatch.html
@@ -24,9 +24,11 @@
           <div class="logoHeader"><img src="images/icon4.jpg" alt="" /></div>
           <div class="siteNameHeader">
             <a id="C">C</a>
-            <a href="">hampionShip-75</a>
+            <a>hampionShip-75</a>
           </div>
-          <div class="imgHeader"><img src="images/icon1.jpg" alt="" /></div>
+          <div class="imgHeader">
+            <img src="images/icon1.jpg" alt="" />
+          </div>
         </header>
         <!-- Header part over -->
 
@@ -37,7 +39,7 @@
             <div class="currentMatch">
               <div class="currentMatchHeading">
                 <div class="currentMatchName">
-                  <a id="currentMatchNameId">Nitesh Vs Savita</a>
+                  <a id="currentMatchNameId">Player A Vs Player B</a>
                 </div>
                 <div class="currentMatchTime">
                   <a id="currentMatchTimeId">(00:00)</a>
@@ -51,7 +53,7 @@
                   <div class="playerNameCover">
                     <div class="playerA">
                       <div class="playerwinnerName">
-                        <label for="winner" id="playerA">Nitesh</label>
+                        <label for="winner" id="playerA">Player A</label>
                       </div>
                       <div class="playerInput">
                         <input
@@ -65,7 +67,7 @@
                     </div>
                     <div class="playerB">
                       <div class="playerwinnerName">
-                        <label for="winner" id="playerB">Savita</label>
+                        <label for="winner" id="playerB">Player B</label>
                       </div>
                       <div class="playerInput">
                         <input
@@ -88,7 +90,9 @@
 
           <!-- profile start -->
           <div class="currentPositionCover">
-            <div class="profileHeading"><a>Player's Profile</a></div>
+            <div class="profileHeading">
+              <a style="color: #09aeff">Player's Profile</a>
+            </div>
             <div class="allProfile">
               <!-- <div class="profileList">
                 <span><a>Position-1</a></span>
@@ -103,16 +107,16 @@
 
         <!-- footer part start -->
         <footer class="footer">
-          <div class="navigator">
+          <div class="navigator" style="width: 50%">
             <ul>
-              <!-- <li class="list active home">
-                <a href="">
+              <li class="list home">
+                <a id="homeBtnFooter" style="display: none">
                   <sapn class="icon"
                     ><i class="fa fa-home" aria-hidden="true"></i
                   ></sapn>
                   <sapn class="iconText">Home</sapn>
                 </a>
-              </li> -->
+              </li>
               <li class="list List active">
                 <a id="listBtnFooter">
                   <sapn class="icon"
@@ -129,14 +133,14 @@
                   <sapn class="iconText">Profile</sapn>
                 </a>
               </li>
-              <!-- <li class="list history">
-                <a href="">
+              <li class="list history">
+                <a id="historyBtnFooter" style="display: none">
                   <sapn class="icon"
                     ><i class="fa fa-history" aria-hidden="true"></i>
                   </sapn>
                   <sapn class="iconText">History</sapn>
                 </a>
-              </li> -->
+              </li>
             </ul>
           </div>
         </footer>
