--- a/Files/squad.html
+++ b/Files/squad.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TEAM MAKING WEBSITE</title>
-    <link rel="icon" href="images/icon2.jpg" />
+    <link rel="icon" href="images/icon4.jpg" />
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="squad.css" />
@@ -24,7 +24,7 @@
           <div class="logoHeader"><img src="images/icon4.jpg" alt="" /></div>
           <div class="siteNameHeader">
             <a id="C">C</a>
-            <a href="">hampionShip-75</a>
+            <a href="../index.html">hampionShip-75</a>
           </div>
           <div class="imgHeader"><img src="images/vsIcon.jpg" alt="" /></div>
         </header>
@@ -58,7 +58,9 @@
 
           <!-- profile -->
           <div class="currentPositionCover">
-            <div class="profileHeading"><a>Player's Profile</a></div>
+            <div class="profileHeading">
+              <a style="color: #09aeff">Player's Profile</a>
+            </div>
             <div class="allProfile">
               <!-- <div class="profileList">
                 <span><a>Position-1</a></span>
@@ -93,7 +95,7 @@
               <li class="list profile">
                 <a id="profileBtnFooter">
                   <sapn class="icon"
-                    ><i class="fa fa-user" aria-hidden="true"></i
+                    ><i class="fa fa-users" aria-hidden="true"></i
                   ></sapn>
                   <sapn class="iconText">Profile</sapn>
                 </a>
@@ -101,7 +103,7 @@
               <li class="list history">
                 <a id="historyBtnFooter">
                   <sapn class="icon"
-                    ><i class="fa fa-history" aria-hidden="true"></i>
+                    ><i class="fa fa-book" aria-hidden="true"></i>
                   </sapn>
                   <sapn class="iconText">History</sapn>
                 </a>
