--- a/Files/tournamentHistory.html
+++ b/Files/tournamentHistory.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TEAM MAKING WEBSITE</title>
+    <link rel="icon" href="images/icon4.jpg" />
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="tournamentHistory.css" />
@@ -22,7 +23,7 @@
           <div class="logoHeader"><img src="images/icon4.jpg" alt="" /></div>
           <div class="siteNameHeader">
             <a id="C">C</a>
-            <a href="">hampionShip-75</a>
+            <a href="../index.html">hampionShip-75</a>
           </div>
           <div class="imgHeader"><img src="images/icon2.jpg" alt="" /></div>
         </header>
@@ -92,7 +93,7 @@
               <li class="list active history">
                 <a id="historyBtnFooter">
                   <sapn class="icon"
-                    ><i class="fa fa-history" aria-hidden="true"></i>
+                    ><i class="fa fa-book" aria-hidden="true"></i>
                   </sapn>
                   <sapn class="iconText">History</sapn>
                 </a>
