--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Squad Making website</title>
-    <link rel="icon" href="Files/images/icon3.jpg" />
+    <link rel="icon" href="Files/images/icon4.jpg" />
     <link rel="stylesheet" href="Files/index.css" />
     <link rel="stylesheet" href="Files/header.css" />
     <link rel="stylesheet" href="Files/body.css" />
@@ -25,7 +25,7 @@
           </div>
           <div class="siteNameHeader">
             <a id="C">C</a>
-            <a href="">hampionShip-75</a>
+            <a href="./">hampionShip-75</a>
           </div>
           <div class="imgHeader">
             <img src="Files/images/indexIcon.jpg" alt="" />
@@ -129,7 +129,7 @@
               <li class="list history">
                 <a id="historyBtnFooter">
                   <sapn class="icon"
-                    ><i class="fa fa-history" aria-hidden="true"></i>
+                    ><i class="fa fa-book" aria-hidden="true"></i>
                   </sapn>
                   <sapn class="iconText">History</sapn>
                 </a>
