--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Squad Making website</title>
     <link rel="icon" href="Files/images/icon4.jpg" />
-    <link rel="stylesheet" href="Files/index.css" />
+    <link rel="stylesheet" href="Files/webContainer.css" />
     <link rel="stylesheet" href="Files/header.css" />
-    <link rel="stylesheet" href="Files/body.css" />
+    <link rel="stylesheet" href="Files/index.css" />
     <link rel="stylesheet" href="Files/footer.css" />
     <link
       rel="stylesheet"
@@ -118,20 +118,20 @@
                   <sapn class="iconText">list</sapn>
                 </a>
               </li>
-              <!-- <li class="list profile">
-                <a href="">
-                  <sapn class="icon"
-                    ><i class="fa fa-user" aria-hidden="true"></i
-                  ></sapn>
-                  <sapn class="iconText">Profile</sapn>
-                </a>
-              </li> -->
               <li class="list history">
                 <a id="historyBtnFooter">
                   <sapn class="icon"
                     ><i class="fa fa-book" aria-hidden="true"></i>
                   </sapn>
                   <sapn class="iconText">History</sapn>
+                </a>
+              </li>
+              <li class="list setting">
+                <a id="settingBtnFooter">
+                  <sapn class="icon"
+                    ><i class="fa fa-cogs" aria-hidden="true"></i>
+                  </sapn>
+                  <sapn class="iconText">Setting</sapn>
                 </a>
               </li>
             </ul>
