--- a/Files/squad.html
+++ b/Files/squad.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TEAM MAKING WEBSITE</title>
+    <title>Display the upcoming Matches</title>
     <link rel="icon" href="images/icon4.jpg" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="webContainer.css" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="squad.css" />
     <link rel="stylesheet" href="currentPosition.css" />
@@ -76,13 +76,24 @@
           <!-- profile -->
           <div class="currentPositionCover">
             <div class="profileHeading">
-              <a style="color: #09aeff">Player's Profile on the basis of </a>
+              <div class="headingName">
+                <a style="color: #09aeff">Player's Profile</a>
+              </div>
+              <div class="headingOptions">
+                <a id="optionsLabel">According to Matches</a>
+                <button id="showProfileBtn">Show</button>
+              </div>
             </div>
             <div class="allProfile">
               <!-- <div class="profileList">
                 <span><a>Position-1</a></span>
                 <span><a>Nitesh</a></span>
                 <span><a>Current Points - 9</a></span>
+              </div>
+              <div class="profileListWinMatches">
+                <span><a>Position-1</a></span>
+                <span><a>Nitesh</a></span>
+                <span><a>Matches: Win-(3) || lose-(1)</a></span>
               </div> -->
             </div>
           </div>
@@ -125,6 +136,14 @@
                   <sapn class="iconText">History</sapn>
                 </a>
               </li>
+              <li class="list history" style="display: none">
+                <a id="settingBtnFooter">
+                  <sapn class="icon"
+                    ><i class="fa fa-cons" aria-hidden="true"></i>
+                  </sapn>
+                  <sapn class="iconText">Setting</sapn>
+                </a>
+              </li>
             </ul>
           </div>
         </footer>
@@ -132,7 +151,9 @@
       </div>
     </div>
     <script src="squad.js"></script>
-    <script src="finalist.js"></script>
+    <script src="finalistAccordingToPoints.js"></script>
+    <script src="finalistAccordingToWinningMatches.js"></script>
     <script src="footer.js"></script>
+    <script src="showPlayersProfile.js"></script>
   </body>
 </html>
