--- a/Files/tournamentHistory.html
+++ b/Files/tournamentHistory.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="tournamentHistory.css" />
     <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="responsive.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
