--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="Files/header.css" />
     <link rel="stylesheet" href="Files/index.css" />
     <link rel="stylesheet" href="Files/footer.css" />
+    <link rel="stylesheet" href="Files/responsive.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
