--- a/Files/setting.html
+++ b/Files/setting.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="setting.css" />
     <link rel="stylesheet" href="feedback.css" />
     <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="responsive.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
