--- a/Files/squad.html
+++ b/Files/squad.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="squad.css" />
     <link rel="stylesheet" href="currentPosition.css" />
     <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="responsive.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
