icon change from all the html pages

--- a/Files/setting.html
+++ b/Files/setting.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Setting</title>
-    <link rel="icon" href="images/icon4.jpg" />
+    <link rel="icon" href="images/icon2.jpg" type="image/jpg" />
     <link rel="stylesheet" href="webContainer.css" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="setting.css" />
