--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tournament Organiser</title>
-    <link rel="icon" href="Files/images/icon2.jpg" />
+    <link rel="icon" href="Files/images/icon2.jpg" type="image/jpg" />
     <link rel="stylesheet" href="Files/webContainer.css" />
     <link rel="stylesheet" href="Files/header.css" />
     <link rel="stylesheet" href="Files/index.css" />
