--- a/Files/tournamentHistory.html
+++ b/Files/tournamentHistory.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Display the tournament Profile</title>
-    <link rel="icon" href="images/icon2.png" type="image/jpg" />
+    <link rel="icon" href="images/icon2.png" type="image/png" />
     <link rel="stylesheet" href="webContainer.css" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="tournamentHistory.css" />
@@ -26,7 +26,9 @@
             <a id="C">C</a>
             <a href="../index.html">hampionShip-75</a>
           </div>
-          <div class="imgHeader"><img src="images/icon2.jpg" alt="" /></div>
+          <div class="imgHeader">
+            <img src="images/icon2.png" alt="" />
+          </div>
         </header>
         <!-- Header part over -->
 
